--- a/index.html
+++ b/index.html
@@ -14,5 +14,26 @@
     <nav>
         <a href="#">Download Excursion (Coming soon!)</a>
     </nav>
+    <figure>
+        <video autoplay src="./resources/media/excursion.mp4"></video>
+    </figure>
+    <section>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <figure>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="campsite at night">
+        </figure>
+    </section>
+    <section>
+        <figure>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="Phone Icon">
+        </figure>
+        <h2>Coming Soon for iPhone and Android
+        </h2>
+        <a href="#">Download Excursion (Coming soon!)</a>
+    </section>
+    <footer>
+        <p>&#169 Excursion</p>
+    </footer>
 </body>
 </html>
