Add muted attributed to video to allow autoplay

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#">Download Excursion (Coming soon!)</a>
     </nav>
     <figure>
-        <video autoplay src="./resources/media/excursion.mp4"></video>
+        <video autoplay muted src="./resources/media/excursion.mp4"></video>
     </figure>
     <section>
         <h2>Your personal travel guide</h2>
